<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_employee_selects_shifts">

    <fragment
        android:id="@+id/nav_employee_selects_shifts"
        android:name="com.example.shiftmanagerhit.ui.EmployeeSelectsShifts.EmployeeSelectsShiftsFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_my_shifts"
        android:name="com.example.shiftmanagerhit.ui.EmployeeShiftsHave.EmployeeShiftsHaveFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_add_employee"
        android:name="com.example.shiftmanagerhit.ui.addEmployee.AddEmployeeFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_manager"
        android:name="com.example.shiftmanagerhit.ui.mangerShifts.MangerFragment"
        android:label="@string/manager_shifts"
        tools:layout="@layout/fragment_manager" />
</navigation>