<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c7"
    android:orientation="vertical"
    app:layout_anchorGravity="center|center_vertical"
    tools:context=".ui.addEmployee.AddEmployeeFragment">


    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/c8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/eT_PersonName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=" "
                android:ems="12"
                android:hint="@string/employee_s_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/eT_PersonEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="@string/employee_s_email"
                android:ems="12"
                android:hint="@string/employee_s_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/eT_PersonPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="@string/employee_s_password"
                android:ems="12"
                android:hint="@string/employee_s_password"
                android:inputType="numberPassword" />

            <!--<EditText
                android:id="@+id/eT_PersonSalary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="12"
                android:hint="@string/employee_s_salary"
                android:inputType="number" />-->

            <CheckBox
                android:id="@+id/isManger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/is_manager" />

            <Button
                android:id="@+id/newEmployeeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_new_employee" />

        </LinearLayout>
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>